--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ packages = [{include = "telegram_uploading_photos"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 requests = "^2.31.0"
+python-dotenv = "^1.0.0"
+python-telegram-bot = "13"
 
 
 [build-system]
